--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 }
 
 * {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
   box-sizing: border-box;
 }
 
@@ -12,17 +15,22 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
-a, a:hover, a:active {
+a,
+a:hover,
+a:active {
   text-decoration: none;
   color: inherit;
 }
@@ -101,7 +109,7 @@ button:disabled {
 }
 
 .tooltip .tooltip__text--bottom::after {
-  transform: rotate( 45deg) translateX(-50%);
+  transform: rotate(45deg) translateX(-50%);
   top: -1px;
   left: 50%;
 }
