--- a/src/components/ResumePage/ResumePage.css
+++ b/src/components/ResumePage/ResumePage.css
@@ -52,14 +52,18 @@
   max-width: 350px;
 }
 
+.resume-page__content-left,
 .resume-page__content-right {
   width: 65%;
   position: relative;
 }
 
 .work {
+  position: relative;
+  /* margin-bottom: 40px; */
   margin-bottom: 30px;
   margin-top: 15px;
+  z-index: 10;
 }
 
 .work__timeline {
@@ -70,17 +74,23 @@
 }
 
 .work__role {
-  font-size: 1.3em;
+  font-size: 1.2em;
   color: black;
   margin: 0;
+  font-weight: bold;
   text-transform: uppercase;
 }
 
 .work__company {
+  width: fit-content;
+  background: #3b3daf26;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: bolder;
+  font-size: 0.9em;
+  margin-bottom: 0;
+  margin-top: 10px;
   color: #333;
-  font-size: 1em;
-  margin: 0;
-  margin-top: 3px;
 }
 
 .work__summary,
@@ -90,6 +100,7 @@
   margin-top: 10px;
 }
 
+.work-wrapper::after,
 .education-wrapper::after {
   content: "";
   position: absolute;
@@ -111,6 +122,7 @@
   color: #3b3daf;
   text-transform: uppercase;
   font-size: 1.3em;
+  font-weight: bold;
 }
 
 .education__school {
@@ -122,23 +134,24 @@
   display: inline-block;
   background: #3b3daf26;
   padding: 10px;
-  font-weight: bolder;
   border-radius: 5px;
+  font-weight: bolder;
+  font-size: 0.8em;
   margin-bottom: 0;
   margin-top: 10px;
-  font-size: 0.8em;
   color: #333;
 }
 
+.work__summary::after,
 .education__summary::after {
   content: "";
   position: absolute;
-  top: 3px;
+  top: 0px;
   left: -58px;
   width: 16px;
   height: 16px;
   border-radius: 10px;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 0 0 8px #3b3daf4d;
   background: #3b3daf;
 }
@@ -167,13 +180,17 @@
   .resume-page__content-left,
   .resume-page__content-right {
     width: 100%;
+    margin-bottom: 20px;
   }
+  .work-wrapper,
   .education-wrapper {
     margin-left: 30px;
   }
+  .work-wrapper::after,
   .education-wrapper::after {
     left: 0;
   }
+  .work__summary::after,
   .education__summary::after {
     left: -37px;
   }
